--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
   </head>
   <body>
     <h1>Monstr Inc.</h1>
-    <div id='create-monster'></div>
+    <div id='create-monster'>
+      <form id="new-monster">
+        <input type="text" name="name" placeholder="name" class="input-text">
+        <input type="text" name="age" placeholder="age" class="input-text">
+        <input type="text" name="description" placeholder="description" class="input-text">
+        <input type="submit">
+      </form>
+    </div>
     <div id='monster-container'></div>
     <button id="back"><=</button>
     <button id="forward">=></button>
-    <!-- <script src='js/index.js'></script> -->
-    <script src='js/demo.js'></script>
+    <script src='js/index.js'></script>
+    <!-- <script src='js/demo.js'></script> -->
   </body>
 </html>
